f native image, just build a jar