@@ -1,8 +1,6 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
-    // id 'org.graalvm.buildtools.native' version '1.1.1'
-    id 'com.gluonhq.gluonfx-gradle-plugin' version '1.0.28'
 }
 
 repositories {
@@ -19,18 +17,8 @@ dependencies {
 }
 
 javafx {
-    version = '22'
+    version = '25'
     modules = [ 'javafx.controls', 'javafx.fxml' ]
-}
-
-gluonfx {
-    compilerArgs += [
-            '--features=com.gregor.jprototerm.PtyForeignRegistrationFeature',
-            '-H:+UnlockExperimentalVMOptions',
-            '-H:+ForeignAPISupport',
-            '--enable-native-access=ALL-UNNAMED',
-            "-H:ConfigurationFileDirectories=${file('src/main/resources/META-INF/native-image/com.gregor/jprototerm').absolutePath}".toString()
-    ]
 }
 
 application {
